--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
         />
 
-        <title>Vite + React</title>
+        <title>Cards</title>
     </head>
     <body>
         <div id="root"></div>
